refactor / mkdocs theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ theme:
     text: Roboto       #Regular
   logo: assets/logo.svg
   language: en
+  custom_dir: docs/overrides
 
   # Theme Modes ...............................................
   palette:
